--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -314,7 +314,7 @@
   <h3 class="first">Consulta de archivos</h3>
   <div class="col s12">
     <!-- <pdf-viewer [src]="pdf" [original-size]="true" [show-all]="true"></pdf-viewer> -->
-    <pdf-viewer  [src]="pdf"></pdf-viewer>
+    <pdf-viewer  [src]="pdf" [render-text]="true" style="display: block;"></pdf-viewer>
   </div>
 </div>
 
