cambio de tipo de dato del archivo pdf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -311,7 +311,7 @@
     <span id="text">Mes: {{mes}}</span>
   </div>
 
-  <h3 class="first">Consulta de archivos</h3>
+  <h3 class="first">Archivo</h3>
   <div class="col s12">
     <!-- <pdf-viewer [src]="pdf" [original-size]="true" [show-all]="true"></pdf-viewer> -->
     <pdf-viewer  [src]="pdf" [render-text]="true" style="display: block;"></pdf-viewer>
